--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,15 @@
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
   background: #7cd4d4;
-  background-image: url(http://www.graphicartsunit.com/images/noise.png)
+  background-image: url(http://www.graphicartsunit.com/images/noise.png);
+  margin: 5rem;
 }
 
-.containerTitle { 
-  width: 400px;
-  height: 100px;
-  margin: 0 auto;
-  margin-top: 20px;
+.containerTitle {
+  margin: 2rem 1rem 1rem;
   border-style: solid;
   border-color: #FFF;
   border-width: 5px;
@@ -15,30 +17,13 @@ body {
 }
 
 .containerTitle h1 {
-  margin: 3px;
+  margin: 0;
+  padding: 0;
   background: #e2df45;
   background-image: url(http://www.graphicartsunit.com/images/noise.png);
   font-family: 'Quicksand', sans-serif;
   font-size: 50px;
   color: #03384b;
-  padding: 22px 30px 22px 30px;
   border-radius: 8px;
-  position: absolute;
-  left: 445px;
   z-index: -1;
-}
-
-.btnAfter {
-  background: #e8afbb;
-  background-image: url(http://www.graphicartsunit.com/images/noise.png);
-  width: 103px;
-  height: 63px;
-  position: absolute;
-  top: 159px;
-  left: 727px;
-  border-radius: 40px;
-  border: none;
-  outline: none;
-  z-index: -1;
-  cursor: pointer;
 }
