--- a/src/styles/Todo.css
+++ b/src/styles/Todo.css
@@ -1,11 +1,11 @@
 li {
     background: #c5ecec;
-    margin: 10px;
-    width: 375px;
+    margin: 10px 0;
     height: 60px;
     border-radius: 40px;
     display: flex;
     justify-content: center;
-    padding-top: 8px;
-    font-size: 45px;
+    align-items: center;
+    font-size: 35px;
+    cursor: pointer;
 }
