--- a/src/styles/TodoForm.css
+++ b/src/styles/TodoForm.css
@@ -1,15 +1,19 @@
+.form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 input {
     background: #FFF;
     background-image: url(http://www.graphicartsunit.com/images/noise.png);
+    padding: 0.25rem;
     width: 210px;
     height: 60px;
-    position: absolute;
-    left: 455px;
-    top: 160px;
+    margin: 10px;
     border-radius: 40px;
     border: none;
     outline: none;
-    padding-left: 35px;
     font-family: 'Quicksand', sans-serif;
     font-size: 25px;
     color: #03384b;
@@ -17,17 +21,17 @@ input {
 
 button {
     background: none;
-    width: 106px;
+    padding: 0.25rem;
+    min-width: 106px;
     height: 64px;
-    top: 23px;
-    left: 720px;
+    margin: 5px;
     font-family: 'Quicksand', sans-serif;
     font-size: 25px;
     font-weight: bold;
     color: #03384b;
-    position: relative;
     border: 3px solid #03384b;
     border-radius: 40px;
     cursor: pointer;
     outline: none;
+    background-color: pink;
 }
